# tiago_openday_static_obst_avoidance

./: .gitignore  README.md
tiago_msgs/: CMakeLists.txt  package.xml
tiago_obst_avoidance/: CMakeLists.txt  package.xml  setup.py
tiago_obst_avoidance/launch/: plotter.launch  send_desired_target_position.launch  setup_controller.launch  spawn_cylinder.launch  tiago_gazebo.launch
tiago_obst_avoidance/launch/models/cylinder/: model.config  model.sdf
tiago_obst_avoidance/scripts/: nmpc_controller  object_detection  plotter  send_desired_target_position
tiago_obst_avoidance/src/tiago_obst_avoidance/: ControllerManager.py  Hparams.py  KinematicModel.py  NMPC.py  ObjectDetectionManager.py  Plotter.py  RobotStatus.py  SendDesiredTargetPosition.py  utils.py
